@@ -1,0 +1,36 @@
+\name{RCLS-class}
+\docType{class}
+\alias{RCLS-class}
+\title{Class \code{"RCLS"}}
+\description{Object of class \code{RCLS}.}
+\section{Objects from the Class}{
+Objects can be created by calls of the form \code{new("RCLS", ...)}.
+}
+\section{Slots}{
+\describe{
+\item{\code{s}:}{
+finite set of size \eqn{s} of classes \eqn{\bm{\Omega} = \{\bm{\Omega}_{g}; \ g = 1, \ldots, s\}}.
+}
+\item{\code{ntrain}:}{
+a vector of length \eqn{s} containing numbers of observations in train datasets \eqn{Y_{\mathrm{train}g}}.
+}
+\item{\code{train}:}{
+a list of data frames containing train datasets \eqn{Y_{\mathrm{train}g}} of length \eqn{n_{\mathrm{train}g}}.
+}
+\item{\code{ntest}:}{
+number of observations in test dataset \eqn{Y_{\mathrm{test}}}.
+}
+\item{\code{test}:}{
+a data frame containing test dataset \eqn{Y_{\mathrm{test}}} of length \eqn{n_{\mathrm{test}}}.
+}
+\item{\code{Zt}:}{
+a factor of true class membership \eqn{\bm{\Omega}_{g}} for the test dataset.
+}
+}
+}
+\author{Marko Nagode}
+\references{
+D. M. Dziuda. Data Mining for Genomics and Proteomics: Analysis of Gene and Protein
+Expression Data. John Wiley & Sons, New York, 2010.
+}
+\keyword{classes}
